--- a/BRDFountain/Views/Main/MasterPage.cshtml
+++ b/BRDFountain/Views/Main/MasterPage.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"  style="width:83%;">
+﻿<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar" style="width:83%;">
     <div class="row mail-task">
         <div class="col-md-3 col-sm-6 col-xs-12 ">
             <a href="Main/FTAApplicationName">
@@ -135,7 +135,7 @@
             <a href="Main/Strategytype">
                 <div class="tsk-head bg-theme-light hover-expand-effect">
                     <div class="content">
-                        <div class="text">Strategy type</div>
+                        <div class="text">Strategy Type</div>
                     </div>
                 </div>
             </a>
@@ -146,7 +146,7 @@
                 <div class="tsk-head bg-theme-light hover-expand-effect">
 
                     <div class="content">
-                        <div class="text">Venue type</div>
+                        <div class="text">Venue Type</div>
                     </div>
                 </div>
             </a>
