--- a/BRDFountain/Views/Main/UserManagement.cshtml
+++ b/BRDFountain/Views/Main/UserManagement.cshtml
@@ -4,7 +4,7 @@
             <h4> User Management   </h4>
         </div>
 
-        <div class="row pull-right">
+        <div class="row pull-right" style="margin-bottom:10px;">
             @*<button ng-show="!IsReadOnly" data-ng-click="showadd()" class="btn btn-primary">Add <i class="fa fa-plus"></i></button>*@
             <button ng-show="!IsReadOnly" data-ng-click="showtempadd()" class="btn btn-primary">Manual User<i class="fa fa-plus"></i></button>
         </div>
