--- a/COBA/Views/Main/Clients.cshtml
+++ b/COBA/Views/Main/Clients.cshtml
@@ -15,13 +15,6 @@
                 <div class="row">
                     <div ng-show="pageList[0].Page">
                         <form novalidate role="form" name="form1">
-
-                            @*<div class="form-group">
-                                    <label for="SBU" >Client Id</label>
-                                    <div>
-                                        <input class="form-control" type="text" ng-model="ecurrency.CurrencyDescrition" title="Select Currency Description" disabled />
-                                    </div>
-                                </div>*@
                             <div class="col-md-6">
                                 <div class="box-body">
                                     <div class="form-group">
@@ -1196,18 +1189,6 @@
                             </div>
                         </div>
                     </div>
-                    @*<div class="row col-lg-12">
-                            <div class="form-group">
-                                <label for="RoleID"> Proposed Deal Commencement Date:</label>
-                                <div class='input-group date' datetimepicker ng-model="currency.ProposedDealCommencementDate">
-                                    <input type='text' class="form-control" readonly required />
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                </div>
-
-                            </div>
-                        </div>*@
                     <div ng-show="pageList[5].Page">
                         <form novalidate role="form" name="form6">
                             <section class="col-lg-12 connectedSortable ui-sortable">
@@ -1685,11 +1666,12 @@
                                     <input type="button" value="Prev" ng-click="activateTab(5)" class="btn btn-primary" />
                                 </span>&nbsp;
                                 <span>
-                                    <input type="button" value="Save" ng-disabled="addform.$invalid || multiselect.selected.length<=0" class="btn btn-primary"  ng-click="InsertClient(currency)" />
+                                    <input type="button" value="Save" ng-disabled="addform.$invalid || multiselect.selected.length<=0" class="btn btn-primary" ng-click="InsertClient(currency)" />
                                 </span>&nbsp;
                                 <input type="button" value="Cancel" ng-click="Confirmcancel()" class="btn btn-primary cancel" />
                             </div>
                         </div>
+                        <label class="col-sm-6 col-sm-offset-2 control-label label-danger" ng-show="errorinfo.length > 0">{{errorinfo}}</label>
                     </div>
 
                     @*<div class="form-group col-lg-12">
