--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -3,8 +3,8 @@
 @Scripts.Render("~/bundles/customscripts")
 <html style="height: auto; min-height: 100%;">
 <head>
-    <base href="/">
-    @*<base href="/COBA/">*@
+    @*<base href="/">*@
+    <base href="/COBA/">
     <meta charset="utf-8" />
     <title> COBA</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="~/css/leftmenu.css">
     <link rel="stylesheet" type="text/css" href="~/css/magic-check.css">
     <link rel="stylesheet" type="text/css" href="~/css/jquery.mCustomScrollbar.css">
-
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600|Open+Sans:400,600|Oswald" rel="stylesheet">
     <link href="~/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/toaster.css" rel="stylesheet" />
@@ -21,7 +20,6 @@
     <link href="~/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/bower_components/Ionicons/css/ionicons.min.css">
-    @*<link rel="stylesheet" type="text/css" href="~/css/style.css">*@
 </head>
 <body ng-app="reportApp" ng-controller="MainController" class="pushmenu-push pushmenu-push-toright">
 
@@ -29,60 +27,6 @@
         <h3><img src="~/images/logo.svg" width="80px"></h3>
         <div>
             <ul class="links" data-widget="tree">
-                @*    <li class='@Html.IsActive("Main", "Index")' aria-haspopup="true">
-                        <a href="Main/Index">
-                            Dashboard
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-                    <li class='@Html.IsActive("Main", "Clients")'>
-                        <a href="Main/Clients">
-                            Clients
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-
-                    <li class='@Html.IsActive("Main", "Tasks")'>
-                        <a href="Main/Tasks">
-                            Tasks
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-
-                    <li class='@Html.IsActive("Main", "MapTask")'>
-                        <a href="Main/MapTask">
-                            Map Task
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-                    <li class='@Html.IsActive("Main", "OnBoardingTasks")'>
-                        <a href="Main/OnBoardingTasks">
-                            OnBoarding Tasks
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-                    <li class='@Html.IsActive("Main", "Emails")'>
-                        <a href="Main/Emails">
-                            Emails
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-
-                    <li class='@Html.IsActive("Main", "Reports")' aria-haspopup="true">
-                        <a href="javascript:;">
-                            Reports
-                            <span class="arrow"></span>
-                        </a>
-                    </li>
-
-                    <li class='@Html.IsActive("Main", "Licensing")' aria-haspopup="true">
-                        <a href="javascript:;">
-                            <i class="icon-briefcase"></i> Licensing
-                            <span class="arrow"></span>
-                        </a>
-
-                    </li>*@
-
                 <li ng-repeat="menu in MenuList" ng-class="{'active': rootname == menu.Path }"><a href="Main/{{menu.Path}}" ng-click="updatemenuclick(menu)"> <span><i class="{{menu.Icon}} "></i></span> {{menu.MenuName}}</a></li>
                 @*<li ng-class="{'active': rootname == 'MappingMaster' }"><a href="MappingMaster" ng-click="updatemenuclick('MappingMaster')"> <span class="icon"><i class="fa fa-star-o"></i></span> Mapping Page</a></li>*@
             </ul>
@@ -98,14 +42,6 @@
                 <div class="user_online"></div>
                 <div class="user_name">@Convert.ToString(Session["UserName"]) </div>
             </div>
-            @*<div class="action_set">
-                    <a href="#">
-                        <img src="~/images/notification.svg" class="btn_bell" />
-                    </a>
-                    <a href="#">
-                        <img src="~/images/settings.svg" class="btn_setting" />
-                    </a>
-                </div>*@
             <div class="log_out">
                 <a ng-click="clearlogout()" href="@Url.Action("Logout", "Home")">
                     <div class="txt">Logout</div>
@@ -114,9 +50,7 @@
                     </div>
                 </a>
             </div>
-
         </div>
-
     </section>
     <div class="main">
         @RenderBody()
