complete migration to sql

--- a/BRDFountain/Views/Main/ModelAlgoManagement.cshtml
+++ b/BRDFountain/Views/Main/ModelAlgoManagement.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
 <div ng-controller="StrategyController">
     <div ng-include="'Main/ConfirmModal'"></div>
-    <div class="col-lg-12 col-md-12  main-content basic-page sidebar" style="width:83%;" ng-show="!showaction">
+    <div class="col-lg-12 col-md-12  main-content basic-page sidebar" style="width:80%;padding:1px!important;" ng-show="!showaction">
         <h4>Strategy Management   </h4>
 
         <div class="row pull-right" ng-if="Permissions.IsWrite || ApprovalCheck.IsApprove">
@@ -62,7 +62,7 @@
     }
 
     .basic-page .form-control {
-        height: 36px;
+        height: 34px;
         padding: 0px 9px;
     }
 
