--- a/BRDFountain/Views/Main/Venuetype.cshtml
+++ b/BRDFountain/Views/Main/Venuetype.cshtml
@@ -31,7 +31,7 @@
                     <div class="btns-b" ng-class="{'has-error':inputTask.$invalid && !inputTask.$pristine }">
                         <div class="col-md-6 form-group" style="position: static;">
                             <label for="input-text-1">Venuetype </label>
-                            <input type="text" class="form-control" id="input-id-1" placeholder="Venuetype " ng-model=VenuetypeMaster.Venuetype>
+                            <input type="number" class="form-control"  placeholder="Venuetype " ng-model=VenuetypeMaster.Venuetype>
                         </div>
 
                         <button data-ng-show="editMode" data-ng-click="UpdateVenuetypeMaster(VenuetypeMaster)" class="col-md-2 col-md-offset-1 btn btn-primary">Update</button>
