--- a/BRDFountain/css/style.css
+++ b/BRDFountain/css/style.css
@@ -1359,3 +1359,7 @@ span.multiselect-native-select {
 .multiselect-native-select .multiselect-container {
     min-width: 100% !important;
 }
+
+.table {
+    margin-bottom: 0px;
+}
