--- a/BRDFountain/Views/Main/RoleManagement.cshtml
+++ b/BRDFountain/Views/Main/RoleManagement.cshtml
@@ -169,5 +169,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="roleChange" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog" style="width:35%; margin:0 auto;">
+                <div class="modal-content">
+                    <div class="modal-header" style="background-color: #3c8dbc;color:white">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                        <h4 class="modal-title" id="myModalLabel">Confirm Change</h4>
+                    </div>
+                    <br />
+                    <div class="modal-body">
+                        You will be logged out once you confirm the change. Click 'Yes' to proceed.
+                    </div>
+                    <br />
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" style="float:right" data-ng-click="ModifySelfUser(role)">Yes</button>
+                        <button type="button" class="btn btn-primary" style="float:right" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
