--- a/BRDFountain/Views/Main/ShowApplicationDetails.cshtml
+++ b/BRDFountain/Views/Main/ShowApplicationDetails.cshtml
@@ -94,7 +94,7 @@
 
                 <div class="form-group">
                     <label>Asset Class </label>
-                    <select class="form-control" ng-model="selectModel.Business" ng-options="item.Business for item in BusinessList" ng-change="userfilter5()" title="Select Business" style="width:100%;font-size: 0.8em" required>
+                    <select class="form-control" ng-model="selectModel.Business" ng-options="item.Business for item in BusinessList" ng-change="userfilter5()" title="Select Asset Class" style="width:100%;font-size: 0.8em" required>
                         <option value="">- Select Asset Class -</option>
                     </select>
                 </div>
@@ -174,7 +174,7 @@
 
                 <div class="form-group">
                     <label>Asset Class Suffix </label>
-                    <select class="form-control disabledinput" ng-model="selectModel.BusinessSuffix" ng-change="userfilter1()" ng-options="item.BusinessSuffix for item in BusinessSuffixList" title="Select BusinessSuffix" disabled style="width:100%;font-size: 0.8em" required>
+                    <select class="form-control disabledinput" ng-model="selectModel.BusinessSuffix" ng-change="userfilter1()" ng-options="item.BusinessSuffix for item in BusinessSuffixList" title="Select Asset Class Suffix" disabled style="width:100%;font-size: 0.8em" required>
                         <option value="">- Select Asset Class Suffix-</option>
                     </select>
                 </div>
@@ -202,11 +202,10 @@
                 </div>
                 <div class="form-group">
                     <label>Status </label>
-                    <select class="form-control" ng-model="selectModel.DiscretionaryCode" ng-change="userfilter1()" ng-options="item.DiscretionaryCode for item in DiscretionaryCodeList" title="Select DiscretionaryCode" style="width:100%;font-size: 0.8em" required>
-                        <option value="">- Select Discretionary Code-</option>
+                    <select class="form-control" ng-model="selectModel.Status" ng-options="item.StatusName for item in StrategyStatusType" title="Select Status" style="width:100%;font-size: 0.8em" required>
+                        <option value="">- Select Status-</option>
                     </select>
                 </div>
-
 
                 <div class="form-group">
                     <label>Country </label>
@@ -222,7 +221,7 @@
     <div class="form-group col-lg-12">
         <div class="col-sm-offset-2 col-sm-10">
             <span>
-                <input type="button" value="Next" ng-disabled="addform.$invalid || multiselect.selected.length<=0" ng-click="activateTab(1)" class="btn btn-primary disabledinput" />
+                <input type="button" value="Next" ng-disabled="addform.$invalid || multiselect.selected.length<=0" ng-click="activateTab(1)" class="btn btn-primary" />
             </span>&nbsp;
             <input type="button" value="Cancel" ng-click="Confirmcancel()" class="btn btn-primary cancel" />
         </div>
@@ -269,7 +268,7 @@
             </span>&nbsp;
 
             <span ng-show="!editMode">
-                <input type="button" value="Save" ng-disabled="adduserform.$invalid" ng-click="InsertStrategy(currency)" class="btn btn-primary disabledinput" />
+                <input type="button" value="Save" ng-disabled="adduserform.$invalid" ng-click="InsertStrategy(currency)" class="btn btn-primary" />
             </span>&nbsp;
             <span ng-show="editMode">
                 <input type="button" value="Update" ng-click="UpdateStrategy(currency)" class="btn btn-primary" />
