--- a/BRDFountain/Views/Shared/_LoginLayout.cshtml
+++ b/BRDFountain/Views/Shared/_LoginLayout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/bower_components/Ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600|Open+Sans:400,600|Oswald" rel="stylesheet">
 </head>
 <body class="login-page">
     @RenderBody()
