--- a/BRDFountain/Views/Shared/_Layout.cshtml
+++ b/BRDFountain/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
 <!doctype html>
 <html style="height: auto; min-height: 100%;">
 <head>
-    @*<base href="/Trinity/">*@
-    <base href="/">
+    <base href="/Trinity/">
+    @*<base href="/">*@
     <meta charset="utf-8" />
     <title> Trinity</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
