--- a/BRDFountain/Views/Shared/_LoginLayout.cshtml
+++ b/BRDFountain/Views/Shared/_LoginLayout.cshtml
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Trinity</title>
-    @*<base href="/Trinity/">*@
-    <base href="/">
-    <meta charset="utf-8" />
+    <base href="/Trinity/">
+    @*<base href="/">*@
+    @*<meta charset="utf-8" /*@>
     <link rel="stylesheet" href="~/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/bower_components/Ionicons/css/ionicons.min.css">
